# glennscli

./: LICENSE  README.md  pylintrc  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
scripts/: activate_venv.sh  install_cli.sh
src/glennscli/: command_line.py
src/glennscli/funnies/: cat_jokes.py  dog_jokes.py
src/mypypackage/: __init__.py  command_line.py
src/mypypackage/funnies/: cat_jokes.py  dog_jokes.py
tests/: __init__.py
tests/command_line/: test_command_line.py
tests/funnies/: test_cat_jokes.py  test_dog_jokes.py
