[metadata]
name = mypypackage-glennmusa
version = 0.0.4
author = Glenn Musa
author_email = 4622125+glennmusa@users.noreply.github.com
description = My example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glennmusa/mypypackage
project_urls =
    Bug Tracker = https://github.com/glennmusa/mypypackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    tellmeajoke = mypypackage.command_line:main
