[metadata]
name = glennscli
version = 0.0.4
author = Glenn Musa
author_email = 4622125+glennmusa@users.noreply.github.com
description = My example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glennmusa/glennscli
project_urls =
    Bug Tracker = https://github.com/glennmusa/glennscli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    knack

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
test_dependencies =
    pytest
    vcrpy

[options.entry_points]
console_scripts =
    glennscli = glennscli.command_line:main
